# ml-course

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
lab1/: Makefile  Practice 1 | Pandas.ipynb  main.ipynb
lab1/var1/: main.ipynb
lab1/var3/: main.ipynb
lab1/var5/: main.ipynb
